# maxy-rag-sales-mcp-notebooklm

./: .claude_settings.json  .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  cookies.txt  demo_ui.py  fix_auth.ps1  pyproject.toml  sync_cookies.py
.github/workflows/: publish.yml
docs/: API_REFERENCE.md  AUTHENTICATION.md  KNOWN_ISSUES.md  MCP_TEST_PLAN.md  MULTI_USER_ANALYSIS.md  QUICK_REFERENCE.md
src/notebooklm_mcp/: __init__.py  api_client.py  auth.py  auth_cli.py  constants.py  server.py
tests/: test_api_client.py  test_auth_middleware.py  test_research_polling.py
